most of the error solved